Navbar Fixed Design

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,16 +1,35 @@
-<nav class="sticky-top">
-    <h1>STADVDB MC01</h1>
 
-<div id="menu-outer">
-    <div class="table">
-        <ul id="horizontal-list">
-            <li><a href = "/"><button class = "navbarbutton" id="navhome">Home</button></a></li>
-            <li><a href = "/directors"><button class = "navbarbutton" id="navdirector">Directors</button></a></li>
-            <li><a href = "/movies"><button class = "navbarbutton" id="navmovies">Movies</button></a></li>
-            <li><a href = "/genres"><button class = "navbarbutton" id="navgenres">Genres</button></a></li>
-        </ul>
-    </div>
-</div>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">IMDB Query Generator</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
 
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li>
+      <a href = "/"><button class = "navbarbutton" id="navhome">Home</button></a>
+      </li>
+
+
+      <li><a href = "/directors"><button class = "navbarbutton"id="navdirector">Directors</button></a>
+      </li>
+
+      <li><a href = "/movies"><button class = "navbarbutton" id="navmovies">Movies</button></a>
+      </li>
+
+
+      <li><a href = "/genres"><button class = "navbarbutton" id="navgenres">Genres</button></a>
+      </li>
+
+      
+    </ul>
+
+  </div>
 </nav>
