--- a/views/director.hbs
+++ b/views/director.hbs
@@ -1,3 +1,5 @@
+
+{{!--
 {{>navbar}}
 <section>
     <h1>Director</h1>
@@ -28,4 +30,53 @@
         <input type="submit" id ="formsumbit"></submit>
         {{!-- <button id ="formsumbit">Submit!</button> --}}
     </form>
+</section>
+
+--}}
+
+{{>navbar}}
+
+<section>
+    <h1 style = "padding-left: 650px;">DIRECTORS QUERY</h1>
+    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchDirectors">
+  <div>
+    <label>Directors that have directed</label>
+    <select name="numofmovieschoice" id="numofmovieschoice" >
+            <option value = "" selected='true'></option>
+            <option value="ATLEAST">ATLEAST</option>
+            <option value="EQUAL TO">EQUAL TO</option>
+            <option value="LESS THAN">LESS THAN</option>
+        </select>
+    <input name="numofmoviesint" id="numofmoviesint" placeholder="No. of Movies">
+  </div>
+  <br>
+
+  <div>
+    </label>Released on</label>
+    <select name="releasedonschoice" id="releasedonschoice" >
+            <option value = "" selected='true'></option>
+            <option value="ATLEAST">ATLEAST</option>
+            <option value="EQUAL TO">EQUAL TO</option>
+            <option value="LESS THAN">LESS THAN</option>
+    </select>
+    <input name="releasedonint" id="releasedonint" placeholder="Year">
+  </div>
+
+  <div>
+  <br>
+        <label>with a genre of</label>
+        <input name="genre" id="genre" placeholder="Genre">
+        <br>
+  </div>
+
+
+  <!-- Submit button -->
+  <input type="submit" id ="formsumbit" class="btn btn-primary btn-block mb-4"></submit>
+ 
+
+
+
+  </div>
+</form>
+
 </section>
