--- a/views/genre_results.hbs
+++ b/views/genre_results.hbs
@@ -1,8 +1,39 @@
+<meta charset="utf-8">
+    <title>TABLES</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
+
 {{>navbar}}
 <section>
     <h1>Genre</h1>
+    <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+            <tr>
+                <th>Movie Count</th>
+                <th>Year</th>
+            </tr>
+        </thead>
     {{#each results}}
-    {{!--  movie_cnt: 2, year: 1994 --}}
-        {{this.movie_cnt}}, {{this.genre}} <br>
+    
+
+        <tbody>
+            <tr>
+                <td>{{this.movie_cnt}}</td>
+                <td>{{this.year}}</td>
+            </tr>
+        </tbody>
+ 
+
     {{/each}}
+    </table>
 </section>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#example').DataTable();
+} );
+</script>
