--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,10 +1,10 @@
 {{>navbar}}
+
 <section>
-    <h1>Movies</h1>
-    <form id = "form" method="get" action="/fetchMovies">
-        <label>Movies<label>
-        <br>
-        <label>with the number of actors/actresses</label>
+    <h1 style = "padding-left: 700px;">MOVIES QUERY</h1>
+    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchDirectors">
+  <div>
+    <label>Movies with the number of actors/actresses</label>
         <select name="numofroleschoice" id="numofroleschoice" >
             <option value = "" selected='true'></option>
             <option value="ATLEAST">ATLEAST</option>
@@ -12,6 +12,7 @@
             <option value="MORE THAN">MORE THAN</option>
         </select>
         <input name="numofrolesint" id="numofrolesint" placeholder="No. of Actors">
+        <br>
         <br>
         </label>released on</label>
         <select name="releasedonschoice" id="releasedonschoice" >
@@ -22,10 +23,17 @@
         </select>
         <input name="releasedonint" id="releasedonint" placeholder="Year">
         <br>
+        <br>
         <label>with a genre of</label>
         <input name="genre" id="genre" placeholder="Genre">
         <br>
-        <input type="submit" id ="formsumbit"></submit>
-        {{!-- <button id ="formsumbit">Submit!</button> --}}
-    </form>
+        <br>
+
+
+  <!-- Submit button -->
+  <input type="submit" id ="formsumbit" class="btn btn-primary btn-block mb-4"></submit>
+
+  </div>
+</form>
+
 </section>
