--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,35 +1,36 @@
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Agency - Start Bootstrap Theme</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
 
-<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">IMDB Query Generator</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: black;">
+            <div class="container" >
+                  <a class="navbar-brand" href="/">IMDB Query Generator</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars ms-1"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="/" id="navhome">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/directors" id="navdirector">Director</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/movies" id="navmovies">Movies</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/genres" id="navgenres">Genre</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
 
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li>
-      <a href = "/"><button class = "navbarbutton" id="navhome">Home</button></a>
-      </li>
-
-
-      <li><a href = "/directors"><button class = "navbarbutton"id="navdirector">Directors</button></a>
-      </li>
-
-      <li><a href = "/movies"><button class = "navbarbutton" id="navmovies">Movies</button></a>
-      </li>
-
-
-      <li><a href = "/genres"><button class = "navbarbutton" id="navgenres">Genres</button></a>
-      </li>
-
-      
-    </ul>
-
-  </div>
-</nav>
