--- a/views/genre.hbs
+++ b/views/genre.hbs
@@ -37,7 +37,7 @@
 
 <section>
     <h1 style = "padding-left: 700px;">MOVIES QUERY</h1>
-    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchDirectors">
+    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchGenres">
   <div>
     <label>Number of Movies with a genre of</label>
         <input name="genre" id="genre" placeholder="Genre">
