--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -2,7 +2,7 @@
 
 <section>
     <h1 style = "padding-left: 700px;">MOVIES QUERY</h1>
-    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchDirectors">
+    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchMovies">
   <div>
     <label>Movies with the number of actors/actresses</label>
         <select name="numofroleschoice" id="numofroleschoice" >
