--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,81 @@
 {{>navbar}}
 <section>
-    <h1>Home</h1>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Agency - Start Bootstrap Theme</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+   
+    <body id="page-top">
+        <!-- About-->
+        <section class="page-section" id="about" style="background: url(../images/bg1.png);">
+            <div class="container" >
+                <div class="text-center" >
+                    <h2 class="section-heading text-uppercase" style ="color:white;">About</h2>
+                    <h3 class="section-subheading" style ="color:white;">What this webiste is for?</h3>
+                    <label style ="color:white;">This website utilizes a public movie database from IMDB in order to design and create a dimensional model for the data warehouse. Various techniques such as transforming, extracting and loading the data from the source to the ETL Tool; in which Apache Nifi was utilized.</label> 
+                    <br>
+                    <br>
+                    <label style ="color:white;">The motivation in this project is to conduct different queries in order to gain access from the database and manipulate the content of the tables and consequently generate reports in line with the IMDB Database. Methods used in this project includes creating a dimensional model which is a star schema in order to execute queries efficiently given that there is a large amount of data in this database. In addition, optimization was also conducted in order to reduce the number of join statements and a way to have an easier  query formulation. 
+</label>
+                </div>
+             
+            </div>
+        </section>
+        <!-- Team-->
+        <section class="page-section bg-light" id="team" style="background: url(../images/bg2.png);">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase" style ="color:white;">Our Amazing Team</h2>
+                </div>
+                <div class="row" style = " padding-left: 200px;">
+                    <div class="col-lg-5">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="../images/francis.jpg" alt="..." />
+                            <h4 style ="color:white;">Francis Calimbas</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="../images/kate.jpg" alt="..." />
+                            <h4 style ="color:white;">Kate Victorino</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="../images/raven.jpg" alt="..." />
+                            <h4 style ="color:white;">Raven Alexis Tee</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="../images/vhino.jpg" alt="..." />
+                            <h4 style ="color:white;">Elderwell Ramos</h4>
+                        </div>
+                    </div>
+                </div>
+            
+            </div>
+        </section>
+      
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
+
 </section>
