--- a/views/director.hbs
+++ b/views/director.hbs
@@ -43,21 +43,21 @@
     <label>Directors that have directed</label>
     <select name="numofmovieschoice" id="numofmovieschoice" >
             <option value = "" selected='true'></option>
-            <option value="ATLEAST">ATLEAST</option>
+            <option value="ATLEAST">AT LEAST</option>
             <option value="EQUAL TO">EQUAL TO</option>
-            <option value="LESS THAN">LESS THAN</option>
+            <option value="LESS THAN">AT MOST</option>
         </select>
     <input name="numofmoviesint" id="numofmoviesint" placeholder="No. of Movies">
   </div>
   <br>
 
   <div>
-    </label>Released on</label>
+    </label>Released </label>
     <select name="releasedonschoice" id="releasedonschoice" >
             <option value = "" selected='true'></option>
-            <option value="ATLEAST">ATLEAST</option>
-            <option value="EQUAL TO">EQUAL TO</option>
-            <option value="LESS THAN">LESS THAN</option>
+            <option value="ATLEAST">AFTER</option>
+            <option value="EQUAL TO">ON</option>
+            <option value="LESS THAN">BEFORE</option>
     </select>
     <input name="releasedonint" id="releasedonint" placeholder="Year">
   </div>
