--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -2,24 +2,24 @@
 
 <section>
     <h1 style = "padding-left: 700px;">MOVIES QUERY</h1>
-    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchDirectors">
+    <form style = "display: inline-block; padding-left: 600px;" id = "form" method="get" action="/fetchMovies">
   <div>
     <label>Movies with the number of actors/actresses</label>
         <select name="numofroleschoice" id="numofroleschoice" >
             <option value = "" selected='true'></option>
-            <option value="ATLEAST">ATLEAST</option>
+            <option value="ATLEAST">AT LEAST</option>
             <option value="EQUAL TO">EQUAL TO</option>
-            <option value="MORE THAN">MORE THAN</option>
+            <option value="MORE THAN">AT MOST</option>
         </select>
         <input name="numofrolesint" id="numofrolesint" placeholder="No. of Actors">
         <br>
         <br>
-        </label>released on</label>
+        </label>released </label>
         <select name="releasedonschoice" id="releasedonschoice" >
             <option value = "" selected='true'></option>
-            <option value="ATLEAST">ATLEAST</option>
-            <option value="EQUAL TO">EQUAL TO</option>
-            <option value="MORE THAN">MORE THAN</option>
+            <option value="ATLEAST">AFTER</option>
+            <option value="EQUAL TO">ON</option>
+            <option value="LESS THAN">BEFORE</option>
         </select>
         <input name="releasedonint" id="releasedonint" placeholder="Year">
         <br>
