Home bigger text

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,12 +20,12 @@
         <section class="page-section" id="about" style="background: url(../images/bg1.png);">
             <div class="container" >
                 <div class="text-center" >
-                    <h2 class="section-heading text-uppercase" style ="color:white;">About</h2>
-                    <h3 class="section-subheading" style ="color:white;">What this webiste is for?</h3>
-                    <label style ="color:white;">This website utilizes a public movie database from IMDB in order to design and create a dimensional model for the data warehouse. Various techniques such as transforming, extracting and loading the data from the source to the ETL Tool; in which Apache Nifi was utilized.</label> 
+                    <h2 class="section-heading text-uppercase" style ="color:white; font-size:50px;">About</h2>
+                    <h3 class="section-subheading" style ="color:white; font-size:20px;">What this webiste is for?</h3>
+                    <label style ="color:white; font-size:25px;">This website utilizes a public movie database from IMDB in order to design and create a dimensional model for the data warehouse. Various techniques such as transforming, extracting and loading the data from the source to the ETL Tool; in which Apache Nifi was utilized.</label> 
                     <br>
                     <br>
-                    <label style ="color:white;">The motivation in this project is to conduct different queries in order to gain access from the database and manipulate the content of the tables and consequently generate reports in line with the IMDB Database. Methods used in this project includes creating a dimensional model which is a star schema in order to execute queries efficiently given that there is a large amount of data in this database. In addition, optimization was also conducted in order to reduce the number of join statements and a way to have an easier  query formulation. 
+                    <label style ="color:white; font-size:25px;">The motivation in this project is to conduct different queries in order to gain access from the database and manipulate the content of the tables and consequently generate reports in line with the IMDB Database. Methods used in this project includes creating a dimensional model which is a star schema in order to execute queries efficiently given that there is a large amount of data in this database. In addition, optimization was also conducted in order to reduce the number of join statements and a way to have an easier  query formulation. 
 </label>
                 </div>
              
