--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -28,6 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="/directors" id="navdirector">Director</a></li>
                         <li class="nav-item"><a class="nav-link" href="/movies" id="navmovies">Movies</a></li>
                         <li class="nav-item"><a class="nav-link" href="/genres" id="navgenres">Genre</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/rankings" id="navgenres">Rankings</a></li>
                     </ul>
                 </div>
             </div>
