--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11800,3 +11800,8 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+
+.newbutton{
+  width: 10vw;
+  height: 10vh;
+}
