--- a/views/genre_results.hbs
+++ b/views/genre_results.hbs
@@ -5,6 +5,7 @@
 {{>navbar}}
 <section>
     <h1>Genre</h1>
+    <div class ="container mb-3 mt-3"> 
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
@@ -27,10 +28,6 @@
     {{/each}}
     </tbody>
     </table>
+    </div>
 </section>
 
-<script type="text/javascript">
-$(document).ready(function() {
-    $('#example').DataTable();
-} );
-</script>
