--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,6 +26,7 @@
         <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>
         <script src="/scripts/validator.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         {{#each scripts}}
         <script type="text/javascript" src="/scripts/{{this}}.js"></script>
         {{/each}}
