--- a/views/movies_results.hbs
+++ b/views/movies_results.hbs
@@ -5,6 +5,7 @@
 {{>navbar}}
 <section>
     <h1>Movies</h1>
+    <div class ="container mb-3 mt-3"> 
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
@@ -28,5 +29,6 @@
     {{/each}}
        </tbody>
     </table>
+    </div>
 </section>
 
